# zmq-protobuf-toy-app

./: .gitignore  LICENSE  README.md
c++/: Makefile  main.cpp  message.cpp  message.hpp  message.proto
c++/message/: echo.cpp  echo.hpp  read.cpp  read.hpp  write.cpp  write.hpp
haskell/: haskell.cabal  stack.yaml
haskell/app/: Main.hs
haskell/src/: Message.hs
