name:                haskell
version:             0.0.0
author:              Vladimir Pankov
copyright:           Copyright (C) 2017 Vladimir Pankov
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:   File
                   , File.ActionType
                   , File.Echo
                   , File.Reply
                   , File.Request
                   , File.Reply.Read
                   , File.Reply.Write
                   , File.Request.Read
                   , File.Request.Write
                   
                   , Message
    
  build-depends:     base >=4.6 && < 4.10
                   , protocol-buffers
                   , protocol-buffers-descriptor
                   , text
                   , bytestring
                  
  hs-source-dirs:      src
  include-dirs:        src
  default-language:    Haskell2010
  ghc-options:         -Wall
  
executable app
  build-depends:    base < 5
  build-depends:    haskell
  hs-source-dirs:   app
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall
